--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Grupo 08</title>
-    <link rel="icon" href="/frontend/images/MuCSnBxFpOQg2Kl.webp" />
+    <link rel="icon" href="images/MuCSnBxFpOQg2Kl.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="/frontend/js/ejercicio_03/ejercicio03.js"></script>
+    <script src="js/ejercicio_03/ejercicio03.js"></script>
   </head>
   <body></body>
 </html>
