--- a/Ejercicio3/index.html
+++ b/Ejercicio3/index.html
@@ -6,8 +6,19 @@
     <title>Grupo 08</title>
     <link rel="icon" href="images/MuCSnBxFpOQg2Kl.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="styles/main.css"
+    />
     <script src="js/ejercicio_03/ejercicio03.js"></script>
   </head>
-  <body></body>
+  <body>
+    <section class="content-body">
+      <p class="screen-statement">
+        Presione la tecla numérica 3 para iniciar el ejercicio
+      </p>
+    </section>
+  </body>
 </html>
