Cambios mínimos en html y css. Nayla Leiva

--- a/Ejercicio3/index.html
+++ b/Ejercicio3/index.html
@@ -12,7 +12,7 @@
       media="screen"
       href="styles/main.css"
     />
-    <script src="js/ejercicio_03/ejercicio03.js"></script>
+    <script src="js/ejercicio03.js"></script>
   </head>
   <body>
     <section class="content-body">
